2020-12-07_what_is_in_your_opponent_hand

--- a/src/main/resources/blog/2020-12-02_minigame.md
+++ b/src/main/resources/blog/2020-12-02_minigame.md
@@ -70,12 +70,10 @@ It starts with one single food card.
 The limit of event cards in the basic game is 3, 
 in minigames are 2. Risky right?
 
- > _Martel_ has in his hand _2_ _event_ card.  
+ > _Martel_ has in his hand _2_ _event_ cards.  
  > _Martel_ has in his hand an _event_ card of _grain_.  
  > _Martel_ has in his hand an _event_ card of _sheep_.  
- > _Tyrell_ has in his hand _2_ _event_ card.  
- > _Tyrell_ has in his hand an _event_ card of _sheep_.  
- > _Tyrell_ has in his hand an _event_ card of _forest_.
+ > _Tyrell_ has in his hand _2_ _event_ cards.  
 
 And it will never grow more than that. If Martel plays one 
 event card, and Tyrell plays nothing:
@@ -87,12 +85,10 @@ event card, and Tyrell plays nothing:
  
 Martel takes one more event card, and Tyrell stays the same.
  
- > _Martel_ has in his hand _2_ _event_ card.  
+ > _Martel_ has in his hand _2_ _event_ cards.  
  > _Martel_ has in his hand an _event_ card of _grain_.  
  > _Martel_ has in his hand an _event_ card of _sheep_.  
- > _Tyrell_ has in his hand _2_ _event_ card.  
- > _Tyrell_ has in his hand an _event_ card of _sheep_.  
- > _Tyrell_ has in his hand an _event_ card of _forest_.
+ > _Tyrell_ has in his hand _2_ _event_ cards.
   
 ### Less food in hand
 
