add test view navigation

--- a/src/main/resources/blog/2021-08-12_play_game.md
+++ b/src/main/resources/blog/2021-08-12_play_game.md
@@ -1,4 +1,4 @@
-# Join Game
+# Play Game
 
 Well, your friend has created a game, so
 you can join and have an amazing time
@@ -17,14 +17,13 @@ player's game.
   |  Player leonard!         |       |  Games of _leonard_      |       !  Game2 joined            | 
   |                          |       |                          |       +--------------------------+ 
   |  ( My games )            | ----> |  * game1 of leonard  J   | ----> |  Player leonard!         | 
-  |  ( Playing Games )       | ----> |  * game2 of leonard N(J) |       |                          | 
-  |                          |       |                          |       |  ( My Games )            | 
-  |  friend name: [penny   ] |       |                          |       :                          : 
+  |                          |       |  * game2 of leonard N(J) |       |                          | 
+  |  friend name: [penny   ] |       |                          |       |  ( My Games )            | 
   |  ( Friend games )        |       |  ( return )              |       :                          : 
-  +--------------------------+       +--------------------------+       +--------------------------+
-           |                            ^                                             
-           | same screen but with penny |                // J: Joined    
-           \----------------------------/                // NJ: Not joined                                   
+  +--------------------------+       +--------------------------+       +--------------------------+ 
+           |                            ^                                                                   
+           | same screen but with penny |                // J: Joined                                                   
+           \----------------------------/                // NJ: Not joined                                                                                                        
 ```                                                                                                      
 
 ## Joining game
@@ -67,7 +66,6 @@ To join a game just click on the game name.
 You can see all your games that are you playing.
 
  > Go to my playing games.  
- > You should be at the list games screen.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 1 game.  
  > You should see the game "together" and creator "penny".    
