--- a/src/main/resources/blog/2021-08-12_play_game.md
+++ b/src/main/resources/blog/2021-08-12_play_game.md
@@ -10,220 +10,100 @@ player's game.
 ### Disseny gràfic
 
 ```                                                                                                      
-   Vista Player:                      Vista List Games:                  Vista Player:               
-  +--------------------------+       +--------------------------+       +--------------------------+ 
-  | ©               …topbar… |       | ©               …topbar… |       | ©               …topbar… | 
-  +--------------------------+       +--------------------------+       +--------------------------+ 
-  |  Player leonard!         |       |  Games of _leonard_      |       !  Game2 joined            | 
-  |                          |       |                          |       +--------------------------+ 
-  |  ( My games )            | ----> |  * game1 of leonard  J   | ----> |  Player leonard!         | 
-  |                          |       |  * game2 of leonard N(J) |       |                          | 
-  |  friend name: [penny   ] |       |                          |       |  ( My Games )            | 
-  |  ( Friend games )        |       |  ( return )              |       :                          : 
-  +--------------------------+       +--------------------------+       +--------------------------+ 
-           |                            ^                                                                   
-           | same screen but with penny |                // J: Joined                                                   
-           \----------------------------/                // NJ: Not joined                                                                                                        
+    View Player:                       View List Games:                       View Game:               
+  +--------------------------+       +------------------------------+       +------------------------------------------------+
+  | ©               …topbar… |       | ©                   …topbar… |       | ©               …topbar…                       |
+  +--------------------------+       +------------------------------+       +------------------------------------------------+
+  |  Player leonard!         |       |  Games of _leonard_          |       |  Player leonard plays game1 created by leonard |
+  |                          |       |                              |   P   |                                                |
+  |  ( My Playing games )    | ----> |  * game1 of leonard   J  (P) | ----> |                                                |
+  |                          |       |  * game2 of leonard N(J) (-) |       |                                                |
+  |  friend name: [penny   ] |       |                              |       |                                                | 
+  |  ( Friend games )        |       |  ( return )                  |       :                                                : 
+  +--------------------------+       +------------------------------+       +------------------------------------------------+ 
+                                                                                                            
+                                                         // P: Play game                                          
 ```                                                                                                      
 
-## Joining game
+## Playing game
 
-### You need another game
+### We need to create a game and join
 
-Before joining, you need your friend to
-create a new game.
+You can only play the games that you have created 
+or joined.
 
- > Given there is your player,  
- > And there is the player "penny",    
- > And "penny" has created the game "together".    
- > And you have been logged in.  
+ > Given there is your player,                           
+ > And there is a game "mygame" created by "leonard".  
+ > And you have been logged in.                           
  <!-- SNAPSHOT status=200 -->  
+ > You should be at the player screen.  
 
-### Listing your friend games
+### Seeing my playing games
 
-If you know your friends name, you can see their games.
-
- > You should be at the player screen.        
- > Enter "penny" as friend name.  
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
-
+ > Go to my playing games.  
+ <!-- SNAPSHOT status=200 -->
  > You should be at the list games screen.        
  > There should be 1 game.  
- > You should see the game "together" and creator "penny".  
+ > You should see the game "mygame" created by "leonard".  
 
-### Joining the game
+### Playing the game
 
 To join a game just click on the game name.
 
- > Join on the game "together" and creator "penny".  
+ > Play on the game "mygame" created by "leonard".  
  <!-- SNAPSHOT status=200 -->  
- > You should be at the player screen.        
- > You should see a message saying that "You have joined together game from penny successfully".  
-
-### See you joined games
-
-You can see all your games that are you playing.
-
- > Go to my playing games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 1 game.  
- > You should see the game "together" and creator "penny".    
-
-### Your games are also in the joined games
-
-If you create a game...
-
- > Given you have created the game "alone"...   
-
-... you also see this game in the game list.
-
- > Go to my playing games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 2 games.  
- > You should see the game "together" and creator "penny".  
- > You should see the game "alone" and creator "leonard".  
-
-## Already joined games
-
-### Starting the game
-
-You can see if you have been already joined to any game.
-
- > Given there is your player,    
- > And there is the player "penny",    
- > And "penny" has created the game "first".    
- > And "penny" has created the game "second".   
- > And you have been logged in.  
- <!-- SNAPSHOT status=200 -->  
-
-### List friend games
-
- > You should be at the player screen.        
- > Enter "penny" as friend name.    
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 2 games.    
- > You should see the game "first" and creator "penny".  
- > You should see the game "second" and creator "penny".  
-
-### Join to the "first" game
-
- > Join on the game "first" and creator "penny".    
- <!-- SNAPSHOT status=200 -->  
- > You should see a message saying that "You have joined first game from penny successfully".    
-
-### And go back to friend games list
-
- > You should be at the player screen.        
- > Enter "penny" as friend name.   
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 2 games.    
- > You should see the game "first" and creator "penny".  
- > You should see the game "second" and creator "penny".  
- > You should have joined the game "first" and creator "penny".  
- > You should have not joined the game "second" and creator "penny".  
+ > You should be at the game screen.        
+ > The player should be "leonard".    
+ > The playing game should be "mygame" created by "leonard".  
 
 ## Validations
 
-Once again, we are human, so few checks are welcome.
+### You cannot play a non-joined game
 
- > Given there is your player,    
- > And you have created the game "mygame".  
- > And there is the player "sheldon",   
- > And there is the player "penny",    
- > And "penny" has created the game "first".      
- > And "penny" has created the game "second".       
- > And you have been logged in.  
- <!-- SNAPSHOT status=200 -->    
+You need to join games first. If not, you cannot play.
 
-### Empty friend
+ > Given there is your player,                               
+ > And there is the player "penny",             
+ > And "penny" has created the game "alone".  
+ > And you have been logged in.                            
+ <!-- SNAPSHOT status=200 -->                                  
+ > You should be at the player screen.                       
 
-You must write the friend name.
+Look to your friend games:
 
- > You should be at the player screen.        
- > Enter "" as friend name.  
- > Go to friend games.  
+ > Enter "penny" as friend name.    
+ > Go to friend games.              
+ <!-- SNAPSHOT status=200 -->
+ > You should be at the list games screen.            
+ > There should be 1 game.                    
+ > You should see the game "alone" created by "penny".                 
+ > You should have not joined the game "alone" created by "penny".      
+
+And try to play:  
+
+ > Play on the game "alone" created by "penny".  
  <!-- SNAPSHOT status=400 -->  
- > You should be at the player screen.        
- > You should see an error message saying that "The friend name should be present".  
+ > You should be at the list games screen.          
+ > You should see an error message saying that "You should play only games in which you are joined".  
 
-### Friend should exist
+## Play your friends game
 
-If the friend does not exist, you cannot see their games.
+You can play the games that you have created,
+but also the games that your friends have created.
 
- > You should be at the player screen.        
- > Enter "unexisting" as friend name.  
- > Go to friend games.  
- <!-- SNAPSHOT status=400 -->  
- > You should be at the player screen.        
- > You should see an error message saying that "The friend name should be an existing player".  
+ > Given there are players "penny" and "leonard"                                 
+ > And "penny" has created the game "together".   
+ > And "leonard" has joined the game "together" created by "penny".  
+ > And you have been logged in.                                       
+ <!-- SNAPSHOT status=200 -->                                      
+ > You should be at the player screen.                           
 
-### Friend with no games
-
-That it is not an error, but you have an empty list.
-
- > You should be at the player screen.        
- > Enter "sheldon" as friend name.  
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be no games.  
-
-### You cannot join your games
-
-You have automatically joined to your games, so you cannot join twice.
-
- > Return from the list games.    
- > You should be at the player screen.        
- > Enter "leonard" as friend name.  
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 1 game.    
- > You should see the game "mygame" and creator "leonard".  
- > You should have joined the game "mygame" and creator "leonard".  
- > Join on the game "mygame" and creator "leonard".  
- <!-- SNAPSHOT status=400 -->  
- > You should see an error message saying that "You should join games in which are you not joined".  
- > There should be 1 game.    
- > You should see the game "mygame" and creator "leonard".  
- > You should have joined the game "mygame" and creator "leonard".  
-
-### And you cannot join twice the same game
-
-If you join to another game...
-
- > Return from the list games.    
- > You should be at the player screen.        
- > Enter "penny" as friend name.     
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->  
- > There should be 2 games.    
- > You should see the game "first" and creator "penny".   
- > You should see the game "second" and creator "penny".  
- > You should have not joined the game "first" and creator "penny".  
- > You should have not joined the game "second" and creator "penny".  
- > Join on the game "first" and creator "penny".  
- <!-- SNAPSHOT status=200 -->  
- > You should be at the player screen.        
- > You should see a message saying that "You have joined first game from penny successfully".  
-
-But, you cannot join again:
-
- > You should be at the player screen.        
- > Enter "penny" as friend name.     
- > Go to friend games.  
- <!-- SNAPSHOT status=200 -->    
- > There should be 2 games.    
- > You should see the game "first" and creator "penny".     
- > You should see the game "second" and creator "penny".   
- > You should have joined the game "first" and creator "penny".    
- > You should have not joined the game "second" and creator "penny".   
- > Join on the game "first" and creator "penny".  
- <!-- SNAPSHOT status=400 -->  
- > You should see an error message saying that "You should join games in which are you not joined".  
- > There should be 2 games.    
- > You should see the game "first" and creator "penny".     
- > You should see the game "second" and creator "penny".   
- > You should have joined the game "first" and creator "penny".    
- > You should have not joined the game "second" and creator "penny".   
+And now, play penny's game.
+                           
+ > Go to my playing games.   
+ <!-- SNAPSHOT status=200 -->                                           
+ > Play on the game "together" created by "penny".                     
+ <!-- SNAPSHOT status=200 -->                                           
+ > You should be at the game screen.                                
+ > The player should be "leonard".                                  
+ > The playing game should be "together" created by "penny".      
