--- a/src/main/resources/blog/2021-08-11_join_game.md
+++ b/src/main/resources/blog/2021-08-11_join_game.md
@@ -10,14 +10,14 @@ player's game.
 ### Disseny gràfic
 
 ```                                                                                                      
-   Vista Player:                      Vista List Games:                  Vista Player:               
+    View Player:                       View List Games:                   View Player:               
   +--------------------------+       +--------------------------+       +--------------------------+ 
   | ©               …topbar… |       | ©               …topbar… |       | ©               …topbar… | 
   +--------------------------+       +--------------------------+       +--------------------------+ 
   |  Player leonard!         |       |  Games of _leonard_      |       !  Game2 joined            | 
   |                          |       |                          |       +--------------------------+ 
-  |  ( My games )            | ----> |  * game1 of leonard  J   | ----> |  Player leonard!         | 
-  |  ( Playing Games )       | ----> |  * game2 of leonard N(J) |       |                          | 
+  |  ( My Created Games )    | ----> |  * game1 of leonard  J   | ----> |  Player leonard!         | 
+  |  ( My Playing Games )    | ----> |  * game2 of leonard N(J) |       |                          | 
   |                          |       |                          |       |  ( My Games )            | 
   |  friend name: [penny   ] |       |                          |       :                          : 
   |  ( Friend games )        |       |  ( return )              |       :                          : 
@@ -51,13 +51,13 @@ If you know your friends name, you can see their games.
 
  > You should be at the list games screen.        
  > There should be 1 game.  
- > You should see the game "together" and creator "penny".  
+ > You should see the game "together" created by "penny".  
 
 ### Joining the game
 
 To join a game just click on the game name.
 
- > Join on the game "together" and creator "penny".  
+ > Join on the game "together" created by "penny".  
  <!-- SNAPSHOT status=200 -->  
  > You should be at the player screen.        
  > You should see a message saying that "You have joined together game from penny successfully".  
@@ -70,7 +70,7 @@ You can see all your games that are you playing.
  > You should be at the list games screen.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 1 game.  
- > You should see the game "together" and creator "penny".    
+ > You should see the game "together" created by "penny".    
 
 ### Your games are also in the joined games
 
@@ -83,8 +83,8 @@ If you create a game...
  > Go to my playing games.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 2 games.  
- > You should see the game "together" and creator "penny".  
- > You should see the game "alone" and creator "leonard".  
+ > You should see the game "together" created by "penny".  
+ > You should see the game "alone" created by "leonard".  
 
 ## Already joined games
 
@@ -106,12 +106,12 @@ You can see if you have been already joined to any game.
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 2 games.    
- > You should see the game "first" and creator "penny".  
- > You should see the game "second" and creator "penny".  
+ > You should see the game "first" created by "penny".  
+ > You should see the game "second" created by "penny".  
 
 ### Join to the "first" game
 
- > Join on the game "first" and creator "penny".    
+ > Join on the game "first" created by "penny".    
  <!-- SNAPSHOT status=200 -->  
  > You should see a message saying that "You have joined first game from penny successfully".    
 
@@ -122,10 +122,10 @@ You can see if you have been already joined to any game.
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 2 games.    
- > You should see the game "first" and creator "penny".  
- > You should see the game "second" and creator "penny".  
- > You should have joined the game "first" and creator "penny".  
- > You should have not joined the game "second" and creator "penny".  
+ > You should see the game "first" created by "penny".  
+ > You should see the game "second" created by "penny".  
+ > You should have joined the game "first" created by "penny".  
+ > You should have not joined the game "second" created by "penny".  
 
 ## Validations
 
@@ -182,14 +182,14 @@ You have automatically joined to your games, so you cannot join twice.
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 1 game.    
- > You should see the game "mygame" and creator "leonard".  
- > You should have joined the game "mygame" and creator "leonard".  
- > Join on the game "mygame" and creator "leonard".  
+ > You should see the game "mygame" created by "leonard".  
+ > You should have joined the game "mygame" created by "leonard".  
+ > Join on the game "mygame" created by "leonard".  
  <!-- SNAPSHOT status=400 -->  
  > You should see an error message saying that "You should join games in which are you not joined".  
  > There should be 1 game.    
- > You should see the game "mygame" and creator "leonard".  
- > You should have joined the game "mygame" and creator "leonard".  
+ > You should see the game "mygame" created by "leonard".  
+ > You should have joined the game "mygame" created by "leonard".  
 
 ### And you cannot join twice the same game
 
@@ -201,11 +201,11 @@ If you join to another game...
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->  
  > There should be 2 games.    
- > You should see the game "first" and creator "penny".   
- > You should see the game "second" and creator "penny".  
- > You should have not joined the game "first" and creator "penny".  
- > You should have not joined the game "second" and creator "penny".  
- > Join on the game "first" and creator "penny".  
+ > You should see the game "first" created by "penny".   
+ > You should see the game "second" created by "penny".  
+ > You should have not joined the game "first" created by "penny".  
+ > You should have not joined the game "second" created by "penny".  
+ > Join on the game "first" created by "penny".  
  <!-- SNAPSHOT status=200 -->  
  > You should be at the player screen.        
  > You should see a message saying that "You have joined first game from penny successfully".  
@@ -217,15 +217,15 @@ But, you cannot join again:
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->    
  > There should be 2 games.    
- > You should see the game "first" and creator "penny".     
- > You should see the game "second" and creator "penny".   
- > You should have joined the game "first" and creator "penny".    
- > You should have not joined the game "second" and creator "penny".   
- > Join on the game "first" and creator "penny".  
+ > You should see the game "first" created by "penny".     
+ > You should see the game "second" created by "penny".   
+ > You should have joined the game "first" created by "penny".    
+ > You should have not joined the game "second" created by "penny".   
+ > Join on the game "first" created by "penny".  
  <!-- SNAPSHOT status=400 -->  
  > You should see an error message saying that "You should join games in which are you not joined".  
  > There should be 2 games.    
- > You should see the game "first" and creator "penny".     
- > You should see the game "second" and creator "penny".   
- > You should have joined the game "first" and creator "penny".    
- > You should have not joined the game "second" and creator "penny".   
+ > You should see the game "first" created by "penny".     
+ > You should see the game "second" created by "penny".   
+ > You should have joined the game "first" created by "penny".    
+ > You should have not joined the game "second" created by "penny".   
