add better posts support and frontMatter

--- a/src/main/resources/blog/2021-08-12_play_game.md
+++ b/src/main/resources/blog/2021-08-12_play_game.md
@@ -1,5 +1,8 @@
+---
+writer: drpicox
+coder: drpicox
+---
 # Play Game
-
 Well, your friend has created a game, so
 you can join and have an amazing time
 together.
