--- a/src/main/resources/blog/2021-08-12_play_game.md
+++ b/src/main/resources/blog/2021-08-12_play_game.md
@@ -10,7 +10,7 @@ together.
 This post shows you how to join to other
 player's game.
 
-### Disseny gràfic
+### UI Dessign
 
 ```                                                                                                      
     View Player:                       View List Games:                       View Game:               
