EcsRefactor: Extract Nameds Component

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -22,8 +22,8 @@ friends in the game.
    +---------------------------------------------------+  Untitled      +----------------------------+   
    |                                                   | -------------> | City Capital               | 
    |  My cities:                                       |                |                            |
-   |  +---------+                                      |                | New City Name: [ Leoland ] |  : hidden
-   |  | Capital |                                      |                | ( change city name )       |  : in
+   |  +---------+                                      |                | New Name: [ Leoland ]      |  : hidden
+   |  | Capital |                                      |                | ( change name )            |  : in
    |  +---------+                                      |                |                            |    pennyland
    |                                                   |                +----------------------------+
    |  Cities of penny:                                 |   
@@ -90,8 +90,8 @@ Make penny open the screen of the city:
  * Click on the "penny" city "Capital"
  * You should be at the city screen.
  * The city should be "Capital".
- * Enter new city name "Pennyland".
- * Click the change city name button.
+ * Enter new name "Pennyland".
+ * Click the change name button.
  <!-- SNAPSHOT status=200 -->
 
 And now you can see the new name.
