--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -59,8 +59,8 @@ You can see the details of a ship.
 
 You can change the name of your ships.
 
- * Enter new ship name "Cerritos".
- * Click the change ship name button.
+ * Enter new name "Cerritos".
+ * Click the change name button.
  <!-- SNAPSHOT status=200 -->
 
 And now you can see the new name.
