EcsRefactor: Creates component Owned

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -89,7 +89,7 @@ Make penny open the screen of the city:
 
  * Click on the "penny" city "Capital"
  * You should be at the city screen.
- * The city should be "Capital".
+ * The name should be "Capital".
  * Enter new name "Pennyland".
  * Click the change name button.
  <!-- SNAPSHOT status=200 -->
@@ -97,7 +97,7 @@ Make penny open the screen of the city:
 And now you can see the new name.
 
  * You should be at the city screen.
- * The city should be "Pennyland".
+ * The name should be "Pennyland".
  * Go back to the previous screen.
  
 And also in the general list.
@@ -130,7 +130,7 @@ for your advantage.
 
  * Click on the "penny" city "Pennyland"
  * You should be at the city screen.
- * The city should be "Pennyland".
+ * The name should be "Pennyland".
  * There is no new city name formulary.
 
 But you can see it in detail.
