--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -41,7 +41,6 @@ You can see your ships on the city.
  <!-- SNAPSHOT status=200 -->  
  * Click on the "leonard" city "Capital"
  * You should be at the city screen.
- * The city should be "Capital".
  * There should be 1 "leonard" ships.
  * There should be the "leonard" "Beagle" ship.
 
@@ -51,8 +50,8 @@ You can see the details of a ship.
 
  * Click on the "leonard" ship "Beagle".
  * You should be at the ship screen.
- * The ship should be "Beagle".
- * The ship should be of "leonard".
+ * The name should be "Beagle".
+ * The owner should be "leonard".
  * The ship population should be 0.
 
 ### Changing the name
@@ -66,7 +65,7 @@ You can change the name of your ships.
 And now you can see the new name.
 
  * You should be at the ship screen.
- * The ship should be "Cerritos".
+ * The name should be "Cerritos".
  * Go back to the previous screen.
  * There should be the "leonard" "Cerritos" ship.
 
@@ -117,7 +116,7 @@ And the order persist, even if we refresh.
  * Refresh the game.
  <!-- SNAPSHOT status=200 -->
  * You should be at the ship screen.
- * The ship should be "Beagle".
+ * The name should be "Beagle".
  * The ship population should be 0.
  * The load/unload amount should be 5.
  * The load button should be highlighted.
