EcsRefactor: Creates component GrowsPopulation

--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -52,7 +52,7 @@ You can see the details of a ship.
  * You should be at the ship screen.
  * The name should be "Beagle".
  * The owner should be "leonard".
- * The ship population should be 0.
+ * The population should be 0.
 
 ### Changing the name
 
@@ -89,9 +89,9 @@ In the beginning there was no population on the ship.
  * Given there is "leonard" playing their game "together".
  <!-- SNAPSHOT status=200 -->  
  * Click on the "leonard" city "Capital"
- * The city population should be 10.
+ * The population should be 10.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 0.
+ * The population should be 0.
 
 ### Loading
 
@@ -106,7 +106,7 @@ You can ask to load people on the ship.
 
 But it is not loaded, yet, not until the end of the round.
 
- * The ship population should be 0.
+ * The population should be 0.
  * The load/unload amount should be 5.
  * The load button should be highlighted.
  * The unload button should be normal.
@@ -117,7 +117,7 @@ And the order persist, even if we refresh.
  <!-- SNAPSHOT status=200 -->
  * You should be at the ship screen.
  * The name should be "Beagle".
- * The ship population should be 0.
+ * The population should be 0.
  * The load/unload amount should be 5.
  * The load button should be highlighted.
  * The unload button should be normal.
@@ -130,9 +130,9 @@ Running the next round will do the load/unload.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 6.
+ * The population should be 6.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 5.
+ * The population should be 5.
  * The load/unload amount should be 0.
  * The load button should be normal.
  * The unload button should be normal.
@@ -141,7 +141,7 @@ Running the next round will do the load/unload.
 
 And unload likewise.
 
- * The ship population should be 5.
+ * The population should be 5.
  * Enter 4 as load/unload amount.
  * Click the unload button.
  <!-- SNAPSHOT status=200 -->
@@ -155,9 +155,9 @@ And see the unload:
 
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 11.
+ * The population should be 11.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 1.
+ * The population should be 1.
  * The load/unload amount should be 0.
  * The load button should be normal.
  * The unload button should be normal.
@@ -176,9 +176,9 @@ But you can only load at most the population that you had on the city.
 
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 1.
+ * The population should be 1.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 12.
+ * The population should be 12.
 
 ### Exceeding ship capacity
 
@@ -188,9 +188,9 @@ Skip few turns to wait for population.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 9.
+ * The population should be 9.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 12.
+ * The population should be 12.
 
 And load as many people as you can:
 
@@ -201,9 +201,9 @@ And load as many people as you can:
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 2.
+ * The population should be 2.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 20.
+ * The population should be 20.
  
 You cannot load more than 20 people into the ship.
 
@@ -218,9 +218,9 @@ But...
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
- * The city population should be 20.
+ * The population should be 20.
  * Click on the "leonard" ship "Beagle".
- * The ship population should be 0.
+ * The population should be 0.
  
 You loose the population if they do not fit on the city. Sorry.
  
