EcsRefactor: Adds Component Dock

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -88,7 +88,7 @@ You can change the name of a city.
 Make penny open the screen of the city:
 
  * Click on the "penny" city "Capital"
- * You should be at the city screen.
+ * You should be at the screen of a city.
  * The name should be "Capital".
  * Enter new name "Pennyland".
  * Click the change name button.
@@ -96,7 +96,7 @@ Make penny open the screen of the city:
 
 And now you can see the new name.
 
- * You should be at the city screen.
+ * You should be at the screen of a city.
  * The name should be "Pennyland".
  * Go back to the previous screen.
  
@@ -129,7 +129,7 @@ reciprocity, ok, sheldon, I know that it was
 for your advantage.
 
  * Click on the "penny" city "Pennyland"
- * You should be at the city screen.
+ * You should be at the screen of a city.
  * The name should be "Pennyland".
  * There is no new city name formulary.
 
