--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -40,7 +40,7 @@ You can see your ships on the city.
    PRINT LAST SNAPSHOT
  <!-- SNAPSHOT status=200 -->  
  * Click on the "leonard" city "Capital"
- * You should be at the city screen.
+ * You should be at the screen of a city.
  * There should be 1 "leonard" ships.
  * There should be the "leonard" "Beagle" ship.
 
