EcsRefactor: Adds Loadable Component

--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -49,7 +49,7 @@ You can see your ships on the city.
 You can see the details of a ship.
 
  * Click on the "leonard" ship "Beagle".
- * You should be at the ship screen.
+ * You should be at the screen of a ship.
  * The name should be "Beagle".
  * The owner should be "leonard".
  * The population should be 0.
@@ -64,7 +64,7 @@ You can change the name of your ships.
 
 And now you can see the new name.
 
- * You should be at the ship screen.
+ * You should be at the screen of a ship.
  * The name should be "Cerritos".
  * Go back to the previous screen.
  * There should be the "leonard" "Cerritos" ship.
@@ -115,7 +115,7 @@ And the order persist, even if we refresh.
 
  * Refresh the game.
  <!-- SNAPSHOT status=200 -->
- * You should be at the ship screen.
+ * You should be at the screen of a ship.
  * The name should be "Beagle".
  * The population should be 0.
  * The load/unload amount should be 5.
@@ -127,6 +127,7 @@ And the order persist, even if we refresh.
 Running the next round will do the load/unload.
 
  * End the round.
+   PRINT LAST SNAPSHOT
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * Click on the "leonard" city "Capital"
