--- a/src/main/resources/blog/2021-08-12_play_game.md
+++ b/src/main/resources/blog/2021-08-12_play_game.md
@@ -56,8 +56,8 @@ To join a game just click on the game name.
  > Play on the game "mygame" created by "leonard".  
  <!-- SNAPSHOT status=200 -->  
  > You should be at the game screen.        
- > The player should be "leonard".    
- > The playing game should be "mygame" created by "leonard".  
+ > "leonard" should be the current player.    
+ > Playing game should be "mygame" created by "leonard".  
 
 ## Validations
 
@@ -108,5 +108,5 @@ And now, play penny's game.
  > Play on the game "together" created by "penny".                     
  <!-- SNAPSHOT status=200 -->                                           
  > You should be at the game screen.                                
- > The player should be "leonard".                                  
- > The playing game should be "together" created by "penny".      
+ > "leonard" should be the current player.                                  
+ > Playing game should be "together" created by "penny".      
