--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -96,19 +96,19 @@ In the beginning there was no population on the ship.
 
 You can ask to load people on the ship.
 
- * The load/unload amount should be 0.
- * The load button should be normal.
- * The unload button should be normal.
- * Enter 5 as load/unload amount.
+ * The load unload amount should be 0.
+ * The load requested should be inactive.
+ * The unload requested should be inactive.
+ * Enter load unload amount as 5.
  * Click the load button.
  <!-- SNAPSHOT status=200 -->
 
 But it is not loaded, yet, not until the end of the round.
 
  * The population should be 0.
- * The load/unload amount should be 5.
- * The load button should be highlighted.
- * The unload button should be normal.
+ * The load unload amount should be 5.
+ * The load requested should be active.
+ * The unload requested should be inactive.
 
 And the order persist, even if we refresh.
 
@@ -117,9 +117,9 @@ And the order persist, even if we refresh.
  * You should be at the screen of a ship.
  * The name should be "Beagle".
  * The population should be 0.
- * The load/unload amount should be 5.
- * The load button should be highlighted.
- * The unload button should be normal.
+ * The load unload amount should be 5.
+ * The load requested should be active.
+ * The unload requested should be inactive.
 
 ### The next round
 
@@ -132,21 +132,21 @@ Running the next round will do the load/unload.
  * The population should be 6.
  * Click on the "leonard" ship "Beagle".
  * The population should be 5.
- * The load/unload amount should be 0.
- * The load button should be normal.
- * The unload button should be normal.
+ * The load unload amount should be 0.
+ * The load requested should be inactive.
+ * The unload requested should be inactive.
 
 ### Unload
 
 And unload likewise.
 
  * The population should be 5.
- * Enter 4 as load/unload amount.
+ * Enter load unload amount as 4.
  * Click the unload button.
  <!-- SNAPSHOT status=200 -->
- * The load/unload amount should be 4.
- * The unload button should be highlighted.
- * The load button should be normal.
+ * The load unload amount should be 4.
+ * The unload requested should be active.
+ * The load requested should be inactive.
  * End the round.
  <!-- SNAPSHOT status=200 -->
  
@@ -157,15 +157,15 @@ And see the unload:
  * The population should be 11.
  * Click on the "leonard" ship "Beagle".
  * The population should be 1.
- * The load/unload amount should be 0.
- * The load button should be normal.
- * The unload button should be normal.
+ * The load unload amount should be 0.
+ * The load requested should be inactive.
+ * The unload requested should be inactive.
 
 ### Exceeding city load
 
 You cannot load more people than population on the city.
 
- * Enter 9999 as load/unload amount.
+ * Enter load unload amount as 9999.
  * Click the load button.
  <!-- SNAPSHOT status=200 -->
  * End the round.
@@ -193,7 +193,7 @@ Skip few turns to wait for population.
 
 And load as many people as you can:
 
- * Enter 9999 as load/unload amount.
+ * Enter load unload amount as 9999.
  * Click the load button.
  <!-- SNAPSHOT status=200 -->
  * End the round.
@@ -210,7 +210,7 @@ You cannot load more than 20 people into the ship.
 
 But...
 
- * Enter 9999 as load/unload amount.
+ * Enter load unload amount as 9999.
  * Click the unload button.
  <!-- SNAPSHOT status=200 -->
  * End the round.
