--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -43,24 +43,24 @@ Create and start playing one of your games:
  * Given there is "leonard" playing their game "together".
  <!-- SNAPSHOT status=200 -->  
  * You should be at the game screen.  
- * The player should be "leonard".
- * The playing game should be "together" created by "leonard".
+ * "leonard" should be the current player.
+ * Playing game should be "together" created by "leonard".
 
 Just make sure, that the next player is penny.
 
  * Given there is the next player "penny".
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
- * The player should be "penny".
- * The playing game should be "together" created by "leonard".
+ * "penny" should be the current player.
+ * Playing game should be "together" created by "leonard".
 
 And back.
 
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
- * The player should be "leonard".
- * The playing game should be "together" created by "leonard".
+ * "leonard" should be the current player.
+ * Playing game should be "together" created by "leonard".
 
 ### See your cities
 
@@ -76,7 +76,7 @@ And penny can see yours:
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
- * The player should be "penny".
+ * "penny" should be the current player.
  * "leonard" should have 1 cities.
  * "leonard" should have the "Capital" city.
  * "penny" should have 1 cities.
@@ -103,7 +103,7 @@ And now you can see the new name.
 And also in the general list.
 
  * You should be at the game screen.
- * The player should be "penny".
+ * "penny" should be the current player.
  * "leonard" should have 1 cities.
  * "leonard" should have the "Capital" city.
  * "penny" should have 1 cities.
@@ -114,7 +114,7 @@ And leonard can see the change.
  * Go to Next player.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
- * The player should be "leonard".
+ * "leonard" should be the current player.
  * "leonard" should have 1 cities.
  * "leonard" should have the "Capital" city.
  * "penny" should have 1 cities.
@@ -141,5 +141,5 @@ You can always go back from any city.
 
  * Go back to the previous screen.
  * You should be at the game screen.
- * The player should be "leonard".
+ * "leonard" should be the current player.
  * There should not be a back button.
