--- a/src/main/resources/blog/2021-08-11_join_game.md
+++ b/src/main/resources/blog/2021-08-11_join_game.md
@@ -174,7 +174,7 @@ That it is not an error, but you have an empty list.
  > Enter "sheldon" as friend name.  
  > Go to friend games.  
  <!-- SNAPSHOT status=200 -->  
- > There should be no games.  
+ > Games list should be empty.  
 
 ### You cannot join your games
 
