--- a/src/main/resources/blog/2021-08-16_ships.md
+++ b/src/main/resources/blog/2021-08-16_ships.md
@@ -12,7 +12,7 @@ Will you board?
 ### UI Design
 
 ```                                                                                
-     View City:                                                   View Ship
+     View Entity City                                                View Entity Ship
    +---------------------------------------------------+  ship   +--------------------------------+
    | ©               …topbar… ( End Turn ) ( Refresh ) | ------> | ©               …top       …top|
    +---------------------------------------------------+         +--------------------------------+
