--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -57,6 +57,7 @@ Just make sure, that the next player is penny.
 And back.
 
  * Go to Next player.
+ PRINT LAST SNAPSHOT
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "leonard" should be the current player.
