2021-08-11_join_game.md & 2021-08-12_play_game.md: font end

--- a/src/main/resources/blog/2021-08-11_join_game.md
+++ b/src/main/resources/blog/2021-08-11_join_game.md
@@ -71,8 +71,8 @@ To join a game just click on the game name.
 You can see all your games that are you playing.
 
  > Go to my playing games.  
- > You should be at the list games screen.  
  <!-- SNAPSHOT status=200 -->  
+ > You should be at the list games screen.  
  > There should be 1 game.  
  > You should see the game "together" created by "penny".    
 
@@ -80,7 +80,8 @@ You can see all your games that are you playing.
 
 If you create a game...
 
- > Given you have created the game "alone"...   
+ > Given you have created the game "alone"...  
+ > Return from the list games  
 
 ... you also see this game in the game list.
 
