2021-08-14_cities.spec.ts

--- a/src/main/resources/blog/2021-08-14_cities.md
+++ b/src/main/resources/blog/2021-08-14_cities.md
@@ -57,7 +57,6 @@ Just make sure, that the next player is penny.
 And back.
 
  * Go to Next player.
- PRINT LAST SNAPSHOT
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "leonard" should be the current player.
@@ -67,9 +66,9 @@ And back.
 
 You can see your cities in the game screen.
 
- * "leonard" should have 1 cities. 
+ * "leonard" should have 1 city. 
  * "leonard" should have the "Capital" city.
- * "penny" should have 1 cities.
+ * "penny" should have 1 city.
  * "penny" should have the "Capital" city.
 
 And penny can see yours:
@@ -78,9 +77,9 @@ And penny can see yours:
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "penny" should be the current player.
- * "leonard" should have 1 cities.
+ * "leonard" should have 1 city.
  * "leonard" should have the "Capital" city.
- * "penny" should have 1 cities.
+ * "penny" should have 1 city.
  * "penny" should have the "Capital" city.
 
 ### Change the name of a city
@@ -105,9 +104,9 @@ And also in the general list.
 
  * You should be at the game screen.
  * "penny" should be the current player.
- * "leonard" should have 1 cities.
+ * "leonard" should have 1 city.
  * "leonard" should have the "Capital" city.
- * "penny" should have 1 cities.
+ * "penny" should have 1 city.
  * "penny" should have the "Pennyland" city.
 
 And leonard can see the change.
@@ -116,9 +115,9 @@ And leonard can see the change.
  <!-- SNAPSHOT status=200 -->
  * You should be at the game screen.
  * "leonard" should be the current player.
- * "leonard" should have 1 cities.
+ * "leonard" should have 1 city.
  * "leonard" should have the "Capital" city.
- * "penny" should have 1 cities.
+ * "penny" should have 1 city.
  * "penny" should have the "Pennyland" city.
 
 ### You cannot change others city name
